# ray

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: ci.yml
ray/: CMakeLists.txt
ray/include/ray/: color.hpp  image.hpp  image_render.hpp  vec.hpp
ray/include/ray/render/: image_render.hpp
ray/src/: image.cpp  image_render.cpp  main.cpp  vec.cpp
ray/src/render/: image_render.cpp
